--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-
+<!DOCTYPE html>
+  <body>
+    <canvas id = "canvas" width = window.innerWidth height = window.innerHeight>
+      
+    </canvas>
+  </body>
+</html>
