--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <body>
-    <canvas id = "canvas" width = window.innerWidth height = window.innerHeight>
+    <canvas id = "canvas" width = "100" height = "100">
       
     </canvas>
   </body>
