--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
     <canvas id = "canvas" width = "100" height = "100">
       
     </canvas>
+    <p>
+      "asdfsfdsaasdfdsadfs" 
+    </p>
   </body>
 </html>
