--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+  <head>
+    <title>game test</title>
+  </head>
   <body>
     <canvas id = "canvas" width = "100" height = "100">
       
