--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-  <head>
+<head>
     <title>game test</title>
-  </head>
-  <body>
-    <canvas id = "canvas" width = "100" height = "100">
-      
+</head>
+
+<body>
+    <canvas id = "myCanvas" width = "100" height = "100">
+        <script src = "jayess.js></script>
     </canvas>
-    <p>
-      "asdfsfdsaasdfdsadfs" 
-    </p>
-  </body>
+</body>
 </html>
