--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <canvas id = "myCanvas" width = "100" height = "100">
+    <canvas id = "myCanvas">
         <script src = "jayess.js></script>
     </canvas>
 </body>
