--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 </head>
 
 <body>
-	<canvas id = "myCanvas">
-		<script src = "jayess.js></script>
-	</canvas>
+	<canvas id = "myCanvas" width = "100" height = "100"></canvas>
+	<script src = "jayess.js></script>
 </body>
 </html>
