--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <head>
 	<title>game test</title>
-	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel = "stylesheet" href = "seeyesess.css">
 </head>
 
 <body>
 	<canvas id = "myCanvas" width = "100" height = "100"></canvas>
-	<script src = "jayess.js></script>
+	<script src = "jayess.js"></script>
 </body>
 </html>
