--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <head>
 	<title>game test</title>
-	<link rel = "stylesheet" href = "seeyesess.css">
+	<link rel = "stylesheet" href = "styles">
 </head>
 
 <body>
-	<canvas id = "myCanvas" width = "100" height = "100"></canvas>
-	<script src = "jayess.js"></script>
+	<canvas id = "myCanvas" width = "100" height = "100" style="border:1px solid black;"></canvas>
+	<script src = "script"></script>
 </body>
 </html>
