--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
+<html>
 <head>
-	<title>game test</title>
-	<link rel = "stylesheet" href = "styles">
+    <title>Hisashi</title>
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/meta/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/meta/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/meta/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/meta/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/meta/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/meta/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/meta/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/meta/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/meta/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/meta/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/meta/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/meta/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/meta/icons/favicon-16x16.png">
+    <link rel="manifest" href="assets/meta/icons/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="assets/meta/icons/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<canvas id = "myCanvas" width = "100" height = "100" style="border:1px solid black;"></canvas>
-	<script src = "script"></script>
+    <script src="script.js"></script>
 </body>
 </html>
